--- a/README.Rmd
+++ b/README.Rmd
@@ -69,8 +69,8 @@ Néhány ábra -- azok, ahol nem a valós kilométert használjuk, hanem az elle
 
 ```{r}
 res <- merge(res, data.table(KM = c(0, 15, 25, 40, 45, 50, 70, 80, 90, 100),
-                             KMTEXT = c("0", "0-15", "15-25", "25-40", "40-45", "45-50",
-                                        "50-70", "70-80", "80-90", "90-100")),
+                             KMTEXT = ordered(c("0", "0-15", "15-25", "25-40", "40-45",
+                                                "45-50", "50-70", "70-80", "80-90", "90-100"))),
              sort = FALSE)
 ```
 
@@ -101,12 +101,12 @@ resWide <- merge(resWide, res[, .(SUCCESS = 100%in%KM), .(ID)], sort = FALSE)
 
 Noha az utolsó rajtszám, mint már volt róla szó, az 1396-os, valójában kevesebb tényleges induló volt (a rajtszámok egy részéhez olyan oldal tartozik, amin egyáltalán semmilyen információ nincs, még csak egy rajtidőpont sem -- sejthetőleg ezek a túrázók el sem indultak). Az ilyen értelemben tényleges indulók száma `r nrow(resWide)`, közülük `r sum(resWide$SUCCESS)` teljesítette sikeresen a 2022-es Kinizsi 100-at; ez `r round(mean(resWide$SUCCESS)*100, 1)`%-os arány.
 
-Érdekes megnézni, hogy a túrát feladók hol szálltak ki. Az alábbi ábrán a kilométerek az utolsó ellenőrzőpontot jelentik, ahol még sikeresen áthaladt az adott túrázó, magyarán a kiszállás igazából ezen ellenőrzőpont után (de még a következő előtt) történt:
+Érdekes megnézni, hogy a túrát feladók hol szálltak ki! Az alábbi ábra mutatja az egyes szakaszokon a túrát feladók számát (tehát ennyien haladtak át időben a szakasz kezdőellenőrzőpontján, de nem a zárón):
 
 ```{r}
-ggplot(data.table(table(res[, .(max(KM)), .(ID)][V1!=100]$V1)), aes(x = V1, y = N)) +
-  geom_bar(stat = "identity") +
-  labs(x = "Utolsó teljesített ellenőrzőállomás", y = "Feladók száma [fő]")
+ggplot(data.table(table(res[, .(levels(res$KMTEXT)[which(levels(res$KMTEXT)==max(KMTEXT))+1]), .(ID)]$V1)),
+       aes(x = V1, y = N)) + geom_bar(stat = "identity") +
+  labs(x = "Szakasz", y = "Feladók száma [fő]")
 ```
 
 ## Sebesség alakulása a túra alatt
@@ -115,8 +115,8 @@ Kezdjük először a sebesség vizsgálatával! Az első kérdés ami felmerül,
 
 ```{r, warning = FALSE}
 ggplot(res, aes(x = SPEED, group = KMTEXT, color = KMTEXT)) + geom_density() +
-  labs(x = "Sebesség [km/h]", y = "", color = "Szakasz [km]") +
-  scale_y_continuous(labels = NULL, breaks = NULL)
+  labs(x = "Sebesség [km/h]", y = "", color = "Szakasz") +
+  scale_y_continuous(labels = NULL, breaks = NULL) + scale_color_discrete()
 ```
 
 Látszik tehát, hogy a leggyorsabb szakasz a rajt és a 15-ös pont közötti, illetve a 15 és 25 közötti volt, onnan nagyjából folyamatos a lassulás, bár azért nem teljesen egyenletesen (a leglassabb például jól láthatóan a 45-ös pont előtti szakasz).
