--- a/README.Rmd
+++ b/README.Rmd
@@ -74,8 +74,8 @@ Néhány ábra -- azok, ahol nem a valós kilométert használjuk, hanem az elle
 
 ```{r}
 res <- merge(res, data.table(KM = c(0, 15, 25, 40, 45, 50, 70, 80, 90, 100),
-                             KMTEXT = ordered(c("0", "0-15", "15-25", "25-40", "40-45",
-                                                "45-50", "50-70", "70-80", "80-90", "90-100"))),
+                             KMTEXT = factor(c("0", "0-15", "15-25", "25-40", "40-45",
+                                               "45-50", "50-70", "70-80", "80-90", "90-100"))),
              sort = FALSE)
 ```
 
@@ -116,9 +116,9 @@ Noha az utolsó rajtszám, mint már volt róla szó, az 1396-os, valójában ke
 Érdekes megnézni, hogy a túrát feladók hol szálltak ki! Az alábbi ábra mutatja az egyes szakaszokon a túrát feladók számát (tehát ennyien haladtak át időben a szakasz kezdőellenőrzőpontján, de nem a zárón):
 
 ```{r}
-ggplot(data.table(table(res[, .(levels(res$KMTEXT)[which(levels(res$KMTEXT)==max(KMTEXT))+1]), .(ID)]$V1)),
-       aes(x = V1, y = N)) + geom_bar(stat = "identity") +
-  labs(x = "Szakasz", y = "Feladók száma [fő]")
+ggplot(merge(res[,.(KM = max(KM)) , .(ID)][KM<100], unique(res[, .(KM, KMTEXT)])[order(KM)][
+  ,.(KM = KM[KM!=100], KMTEXT = KMTEXT[-1])])[, .N , .(KMTEXT)],
+  aes(x = KMTEXT, y = N)) + geom_bar(stat = "identity") + labs(x = "Szakasz", y = "Feladók száma [fő]")
 ```
 
 ## Sebesség alakulása a túra alatt
@@ -192,7 +192,7 @@ Ennek legegyszerűbb ábrázolási eszköze a szóródási diagram: minden pont 
 ggplot(resEffortWide, aes(x = `SPEEDEFFORT0-15`, y = `SPEEDEFFORT15-25`)) + geom_jitter() +
   labs(x = "Korrigált sebesség a 15 km-es ellenőrzőpontig [km-effort/h]",
        y = "Korrigált sebesség a 15 és 25 km-es\nellenőrzőpont között [km-effort/h]") +
-   geom_abline(color = "red")
+  geom_abline(color = "red")
 ```
 
 Jól látszik, hogy a két szakaszon mért sebesség között nagyon szoros, pozitív -- és szinte lineáris -- volt a kapcsolat: aki az egyiken gyorsabb volt, az a másikon is, és szinte arányosan. Az, hogy a pontok a piros vonal alatt vannak többségében nem meglepő: már korábban is láttuk, hogy a második szakasz átlagosan lassabban ment.
