--- a/README.Rmd
+++ b/README.Rmd
@@ -74,8 +74,8 @@ Néhány ábra -- azok, ahol nem a valós kilométert használjuk, hanem az elle
 
 ```{r}
 res <- merge(res, data.table(KM = c(0, 15, 25, 40, 45, 50, 70, 80, 90, 100),
-                             KMTEXT = factor(c("0", "0-15", "15-25", "25-40", "40-45",
-                                               "45-50", "50-70", "70-80", "80-90", "90-100"))),
+                             KMTEXT = c("0", "0-15", "15-25", "25-40", "40-45",
+                                        "45-50", "50-70", "70-80", "80-90", "90-100")),
              sort = FALSE)
 ```
 
